--- a/themes/hyde-my/layouts/index.html
+++ b/themes/hyde-my/layouts/index.html
@@ -22,6 +22,6 @@
 </div>
 </div>
 
-    <script src="https://use.fontawesome.com/9564718638.js"></script>
+	{{ partial "footer.html" . }}
   </body>
 </html>
