--- a/themes/hyde-my/layouts/_default/list.html
+++ b/themes/hyde-my/layouts/_default/list.html
@@ -1,5 +1,8 @@
 {{ partial "head.html" . }}
 <body class="{{ .Site.Params.themeColor }} {{if .Site.Params.layoutReverse}}layout-reverse{{end}}">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K3VM8L" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
 {{ partial "sidebar.html" . }}
 
