--- a/themes/hyde-my/static/css/custom.css
+++ b/themes/hyde-my/static/css/custom.css
@@ -1,3 +1,12 @@
+address a:hover {
+    text-decoration: none;
+}
+
+span.reverse {
+  unicode-bidi: bidi-override;
+  direction: rtl;
+}
+
 .sidebar-external > li > a > i {
     font-size: 160%;
 }
