--- a/themes/hyde-my/layouts/_default/single.html
+++ b/themes/hyde-my/layouts/_default/single.html
@@ -14,7 +14,7 @@
 			<div class="post">
 				<h1>{{ .Title }}</h1>
 				{{ if eq .Type "post" }}
-				<span class="post-date">a{{ .Date.Format "Mon, Jan 2, 2006" }}</span> {{ end }} {{ .Content }}
+				<span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span> {{ end }} {{ .Content }}
 			</div>
 
 			{{ if and (isset .Site.Params "disqusShortname") (ne .Site.Params.disqusShortname "") }}
